2007-06-03  Andrew Lunn <andrew.lunn@ascom.ch>

	* src/net/net_io.c: (do_ip_addr): Option to set domain name.
	* doc/redboot_cmds.sgml: Document new option.
	
2007-06-03  Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>

	* cdl/redboot.cdl: CDL to control the use of DNS domain name.
	* src/net/bootp.c: Get the domain name from the reply.
	* src/net/dns.c: Domain name from CDL, fconfig and DHCP.
	
2007-06-02  Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>

	* src/flash.c: (fis_list): fis list will now list an image
	which happens to start at address 0.
	
2007-04-11  Gary Thomas  <gary@mlbassoc.com>
2007-04-11  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/fs/fileio.c: Temporary kludge to treat flash correctly if either
	flash v1 or flash v2 used with this file.
	(do_mount): silence warning. Include accidentally omitted printf arg.
	(do_list): silence warning.

2007-01-22  Peter Korsgaard  <peter.korsgaard@barco.com>

	* src/load.c (do_load): Reset entry address before load so
	go/exec commands will fail after an incomplete upload.

2006-11-28  David Fernandez  <dfernandez@cct.co.uk>

	* cdl/redboot.cdl: Modified to change the option
	CYGDAT_REDBOOT_DEFAULT_NETWORK_DEVICE to make it independent of
	CYGSEM_REDBOOT_FLASH_CONFIG, changes in net_io.c will allow to
	specify a default interface in terms of the name and its position
	in the table of interfaces for the driver.

	* src/net/net_io.c: Modified to allow
	CYGDAT_REDBOOT_DEFAULT_NETWORK_DEVICE to be used even with no flash
	available.
	Bug regarding CYGSEM_REDBOOT_NETWORK_INIT_ONE_DEVICE fixed, so that
	when working with several network interfaces, and the default one
	fails to initialize, only the first successfully initialized one is
	used.

2006-11-19  Andrew Lunn  <lunn@laptop.lunn.ch>

	* src/load.c: Only call valid_address() if
	CYGSEM_REDBOOT_VALIDATE_USER_RAM_LOADS is enabled.

2006-09-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/redboot.cdl: Fix description of CYGSEM_REDBOOT_DISK_IDE.